--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/bojidardimitrov03-beep/battleshipsGame#readme",
   "devDependencies": {
     "@babel/core": "^7.29.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.28.6",
     "@babel/preset-env": "^7.29.0",
     "babel-jest": "^30.2.0",
     "babel-loader": "^10.0.0",
